# frankenfish

./: .gitignore  CHANGELOG.md  LICENSE  README.md  generate_and_install.bash  pyproject.toml
src/: main.py
src/frankenfish_generator/: __init__.py  datapack_file.py  datapack_generation.py  datapack_writer.py  fish_detector_generation.py  fish_reviver_generation.py  loot_table_generation.py  mcfunction.py  mcmeta_generation.py  minecraft_version.py  resource_location.py
